added map (require google play service)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AndroidGeoTest</string>
+    <string name="google_api_key">AIzaSyD_aPVO1XeWZfrEZ-mVHboDUpW_MzRdJo4</string>
 </resources>
