Login funzionante...assettare la parte dei permessi ---aggiustata la parte del LocationService LocationServices.FusedLocationApi.removeLocationUpdates(mGoogleApiClient, this);

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,5 @@
 
 
     <string name="datePattern">dd-MM-yyyy</string>
+    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</string>
 </resources>
